# treebloomer

./: .env.example  .gitignore  README.md  example.env  main.py  pyproject.toml  requirements.txt
docs/: Code_Walkthrough.ai.md
docs/notes/jkl/: general.md  wordcloud_stuff.md
docs/notes/jkl/ai/: config_files.ai.md  force_flags.ai.md
notes/jkl/: general.md
processes/: audio_compression.py  audio_extraction.py  html_page_generation.py  summarization.py  transcript_extraction.py  word_cloud_generation.py
processes/process_templates/: incremental_process.py  one-shot_process.py
treebloomer/: __init__.py  __main__.py
treebloomer/processes/: audio_compression.py  audio_extraction.py  html_page_generation.py  summarization.py  transcript_extraction.py  word_cloud_generation.py
treebloomer/processes/process_templates/: incremental_process.py  one-shot_process.py
treebloomer/utilities/: collect_source_code.py  renamer_v1-v2.py
util/: collect_source_code.py  renamer_v1-v2.py
